syntax = "proto3";

package protocol;

message isRegisterRequest{
  string Username = 1;
}
message RegisterRequest{
  string Username = 1;
  string Password = 2;
  string Email = 3;
  string Birthday = 4;
  int64 Gender = 5;
}
// TODO： 需要一个httpCode状态码
message RegisterResponse{
  bool Status = 1;
  int64 httpCode = 2;
  string Message = 3;
}

message StopRequest{
  string StopMethod = 1;
}

message StopResponse{
  bool Status = 1;
  string Message = 2;
}


service RegisterService{
  // 是否注册
  rpc IsRegistered(isRegisterRequest) returns(RegisterResponse);
  // 准备注册
  rpc ReadyRegister(RegisterRequest) returns(RegisterResponse);
  // 停止服务
  rpc StopRegister (StopRequest) returns(StopResponse);
}